@@ -1,26 +1,33 @@
 package br.com.manage.store.domain.service.impl;
 
 import br.com.manage.store.application.api.request.ProductRequest;
+import br.com.manage.store.application.api.response.OptionalCategory;
 import br.com.manage.store.application.api.response.ProductResponse;
 import br.com.manage.store.domain.entity.ProductEntity;
+import br.com.manage.store.domain.enums.ISubcategory;
+import br.com.manage.store.domain.enums.category.CategoryEnum;
 import br.com.manage.store.domain.mapper.GenericMapper;
 import br.com.manage.store.domain.service.IProductService;
 import br.com.manage.store.infrastructure.handler.exceptions.NotFoundException;
+import br.com.manage.store.infrastructure.handler.exceptions.PersistenceDataBaseException;
 import br.com.manage.store.infrastructure.repository.ProductRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.beans.BeanUtils;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
+import org.springframework.data.domain.*;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
-import static br.com.manage.store.infrastructure.util.ComparePrice.checkPrice;
-import static br.com.manage.store.infrastructure.util.VerifyNotNull.notNull;
+import static br.com.manage.store.infrastructure.util.AssertUtils.notEmpty;
+import static br.com.manage.store.infrastructure.util.CalcPriceUtil.discount;
+import static br.com.manage.store.infrastructure.util.ComparePriceUtils.checkPrice;
+import static br.com.manage.store.infrastructure.util.EnumCheckerUtils.isValidEnum;
+import static br.com.manage.store.infrastructure.util.ProductExistsUtil.*;
 
 @Service
 @AllArgsConstructor
@@ -29,18 +36,21 @@ public class ProductService implements IProductService {
     private final ProductRepository productRepository;
     private final GenericMapper mapper;
 
-    @Transactional
+    @Transactional(rollbackFor = PersistenceDataBaseException.class)
     @Override
     public ProductResponse create(ProductRequest request) {
-        notNull(request);
+        notEmpty(request);
+        verifyConflictProduct(productRepository, request.getCode());
         checkPrice(request.getPrice());
+        isValidEnum(request);
         var entity = mapper.map(request, ProductEntity.class);
+        entity.setPriceWithDiscount(discount(request.getDiscountPercentage(), request.getPrice()));
         return mapper.map(productRepository.save(entity), ProductResponse.class);
     }
 
     @Override
     public ProductResponse findById(Long id) {
-        notNull(id);
+        notEmpty(id);
         var entity = productRepository.findById(id).orElseThrow(() -> new NotFoundException("ID: " + id));
         return mapper.map(entity, ProductResponse.class);
     }
@@ -48,26 +58,38 @@ public class ProductService implements IProductService {
     @Transactional
     @Override
     public void delete(Long id) {
-        notNull(id);
-        if (!productRepository.existsById(id)) {
-            throw new NotFoundException("ID: " + id);
-        }
-
+        notEmpty(id);
+        verifyExistsIdProduct(productRepository, id);
         productRepository.deleteById(id);
     }
 
+    @Transactional(rollbackFor = PersistenceDataBaseException.class)
     @Override
     public ProductResponse update(Long id, ProductRequest request) {
-        notNull(List.of(id, request));
-        var product = productRepository.findById(id).orElseThrow(() -> new NotFoundException("ID: " + id));
+        notEmpty(id, request);
+        isValidEnum(request);
+        var product = getProductExists(productRepository, id);
+        verifyConflictEntityAndRequestCode(productRepository, product, request);
         BeanUtils.copyProperties(request, product, "id");
+        product.setPriceWithDiscount(discount(request.getDiscountPercentage(), request.getPrice()));
         return mapper.map(productRepository.save(product), ProductResponse.class);
     }
 
     @Override
-    public List<ProductResponse> findAll(Specification<ProductEntity> specification, int size, int page) {
+    public Page<ProductResponse> findAll(Specification<ProductEntity> specification, int size, int page) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "id"));
         Page<ProductEntity> products = productRepository.findAll(specification, pageable);
-        return mapper.mapAll(products.stream().toList(), ProductResponse.class);
+        return new PageImpl<>(mapper.mapAll(products.stream().toList(), ProductResponse.class), pageable, products.getTotalElements());
+    }
+
+    @Override
+    public List<OptionalCategory> findAllCategory() {
+        return Arrays.stream(CategoryEnum.values()).map(category -> {
+            List<String> subcategory = new ArrayList<>();
+            for (ISubcategory sub : category.getSubcategory()) {
+                subcategory.add(sub.getSubcategory());
+            }
+            return new OptionalCategory(category.getCategory(), subcategory);
+        }).collect(Collectors.toList());
     }
 }
